chrome image overflow bug fix and new favicon

--- a/client/src/components/card/Card.scss
+++ b/client/src/components/card/Card.scss
@@ -3,7 +3,7 @@
 .card {
     display: grid;
     width: 100%; height: 100%;
-    grid-template-rows: 6fr 2fr 1fr;
+    grid-template-rows: 6fr 2fr 1fr auto;
     grid-gap: 1rem;
     padding: 1rem;
 
@@ -12,6 +12,7 @@
         height: 100%;
         object-fit: cover;
         border-radius: 10px;
+        overflow: hidden;
     }
 
     .text-flex{
@@ -47,7 +48,7 @@
     width: clamp(325px, 35%, 1200px);
     padding: 3rem 1rem;
     background-color: #181818;
-    z-index: 200;
+    z-index: 5000;
 
     .closebtn{
         @extend %btn-reset;
