--- a/client/src/components/design-home/GalleryDisplay.scss
+++ b/client/src/components/design-home/GalleryDisplay.scss
@@ -1,15 +1,15 @@
 .gallery-display-container{
-    width: 100%;
+    width: 100%; height: 100%;
 }
 
 .gallery-content{
-    max-width: 1400px;
+    max-width: 1400px; 
     margin: 0 auto; 
 
     .card-container{
         display: grid;
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-        grid-auto-rows: 375px;
+        grid-auto-rows: 400px;
         grid-gap: 1rem;
     }    
 }
